--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/Level1.Level1
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_FPSPlinkerGameModeBase.BP_FPSPlinkerGameModeBase_C
+GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
